Adding download link.

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -89,6 +89,9 @@
         This is <em>HTML!</em>
       </p>
     </div>
+    <div class="download" id="">
+      <a href="./ResumeContent" download>Download Here!</a>
+    </div>
 
   </body>
 
