--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,98 +1,110 @@
-
-
 <!doctype html>
+
 <html>
-  <head>
 
-  </head>
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400i,700" rel="stylesheet">
+</head>
 
-  <body>
-    <header>
-        <nav>
-          <a href="#about">about</a>
-          <a href="#skills">skills</a>
-          <a href="#experience">experience</a>
-          <a href="#contact">contact</a>
-        </nav>
-        <h1>Burak Gulseren</h1>
-        <h3>Programmer</h3>
-        <img alt="Charlie Brown" src="https://pbs.twimg.com/profile_images/692042936930955266/Nc6Hz55X_400x400.jpg">
-    </header>
-    <section>
-      <div id="about">
-          <h2>About</h2>
-          <h3>Profile Highlights</h3>
-          <p>5 years of experience in industrial automation projects as project / application engineer / programmer</p>
-          <p>Delivered and commissioned 10+ DCS / PLC / ESD based automation projects with B&R, Honeywell Experion, Siemens Simatic/PCS7, Emerson DeltaV control systems and Siemens WinCC, Wonderware Intouch SCADA systems for various industries (mainly, manufacturing, chemicals, oil & gas)</p>
-          <p>Programmed complex servo motion control loops, using PLCopen Motion Control, IEC 61131 standards and excellent understanding of multi-axis coordinated motion programming</p>
-          <p>Experienced in commissioning Powerlink, Fieldbus, Profibus, Modbus, OPC, Industrial Ethernet communication protocols and configuring most of the networking equipment and interfaces (routers, switches, server-clients, etc.)</p>
-          <p>Designed and optimized control loops in various projects using modern methodologies available in control literature</p>
-          <p>Proficient in OOP and Structured Programming, languages include (but not limited to) Structured Text, C/C++</p>
-      </div>
-    </section>
+<body>
+  <header class="blueBG whiteText">
+    <nav>
+      <a href="#about">about</a>
+      <a href="#skills">skills</a>
+      <a href="#experience">experience</a>
+      <a href="#contact">contact</a>
+    </nav>
+    <h1>Burak Gulseren</h1>
+    <h3>Programmer</h3>
+    <img alt="Charlie Brown" src="https://pbs.twimg.com/profile_images/692042936930955266/Nc6Hz55X_400x400.jpg">
+  </header>
+  <section>
+    <div id="about">
+      <h2>About</h2>
+      <h3>Profile Highlights</h3>
+      <p>5 years of experience in industrial automation projects as project / application engineer / programmer</p>
+      <p>Delivered and commissioned 10+ DCS / PLC / ESD based automation projects with BnR, Honeywell Experion, Siemens Simatic/PCS7,
+        Emerson DeltaV control systems and Siemens WinCC, Wonderware Intouch SCADA systems for various industries (mainly,
+        manufacturing, chemicals, oil & gas)</p>
+      <p>Programmed complex servo motion control loops, using PLCopen Motion Control, IEC 61131 standards and excellent understanding
+        of multi-axis coordinated motion programming</p>
+      <p>Experienced in commissioning Powerlink, Fieldbus, Profibus, Modbus, OPC, Industrial Ethernet communication protocols
+        and configuring most of the networking equipment and interfaces (routers, switches, server-clients, etc.)</p>
+      <p>Designed and optimized control loops in various projects using modern methodologies available in control literature</p>
+      <p>Proficient in OOP and Structured Programming, languages include (but not limited to) Structured Text, C/C++</p>
+    </div>
+  </section>
 
-    <section>
-      <div id="skills">
-        <h2>Skills</h2>
-          <ul>
-            <li>PLC Programming</li>
-            <p><meter min="0" max="100" value="60"></meter>%60</p>
-            <li>C</li>
-            <p><meter min="0" max="100" value="60"></meter>%60</p>
-            <li>C++</li>
-            <p><meter min="0" max="100" value="60"></meter>%60</p>
-            <li>OOP</li>
-            <p><meter min="0" max="100" value="60"></meter>%60</p>
-          </ul>
-    </section>
+  <section>
+    <div id="skills" class="blueBG whiteText">
+      <h2>Skills</h2>
+      <ul>
+        <li>PLC Programming</li>
+        <p>
+          <meter min="0" max="100" value="60"></meter>%60</p>
+        <li>C</li>
+        <p>
+          <meter min="0" max="100" value="60"></meter>%60</p>
+        <li>C++</li>
+        <p>
+          <meter min="0" max="100" value="60"></meter>%60</p>
+        <li>OOP</li>
+        <p>
+          <meter min="0" max="100" value="60"></meter>%60</p>
+      </ul>
+  </section>
 
-    <section>
-      <div id="experience">
-          <h2>Experience</h2>
-          <article>
-            <h4>GN Thermoforming</h4>
-            <p>2016 - 2018</p>
-            <h5>Programmer</h5>
-            <p>Programming Machines, testing, fixing bugz, etc.</p>
-          </article>
-          <article>
-            <h4>Process Automation Solutions</h4>
-            <p>2013 - 2015</p>
-            <h5>Project & Application Engineer</h5>
-            <p>Executing automation projects, testing, fixing bugz, etc.</p>
-          </article>
-          <article>
-            <h4>Honeywell</h4>
-            <p>2011 - 2013</p>
-            <h5>Project & Application Engineer</h5>
-            <p>Executing automation projects, testing, fixing bugz, etc.</p>
-          </article>
-    </section>
+  <section>
+    <div id="experience">
+      <h2>Experience</h2>
+      <article>
+        <h4>GN Thermoforming</h4>
+        <p>2016 - 2018</p>
+        <h5>Programmer</h5>
+        <p>Programming Machines, testing, fixing bugz, etc.</p>
+      </article>
+      <article>
+        <h4>Process Automation Solutions</h4>
+        <p>2013 - 2015</p>
+        <h5>Project & Application Engineer</h5>
+        <p>Executing automation projects, testing, fixing bugz, etc.</p>
+      </article>
+      <article>
+        <h4>Honeywell</h4>
+        <p>2011 - 2013</p>
+        <h5>Project & Application Engineer</h5>
+        <p>Executing automation projects, testing, fixing bugz, etc.</p>
+      </article>
+  </section>
 
-<footer>
-  <div id="contact">
+  <footer class="blackBG whiteText">
     <h2>Contact</h2>
     <h3>Burak Gulseren</h3>
     <h3>Programmer</h3>
-    <ul>
-        <li><a href="https://www.linkedin.com/in/gulseren/" target="_blank">LinkedIn</li>
-        <li><a href="https://googleplus.com/gulseren" target="_blank">Google Plus</li>
-        <li><a href="mailto:burak136@gmail.com" target="_blank">Email me!</li>
-    </ul>
+    <div id="contact">
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/gulseren/" target="_blank">LinkedIn</li>
+        <li>
+          <a href="https://googleplus.com/gulseren" target="_blank">Google Plus</li>
+        <li>
+          <a href="mailto:burak136@gmail.com" target="_blank">Email me!</li>
+      </ul>
+    </div>
+  </footer>
 
+  <!–– div class is for styling and id a unique identifier ––>
+  <div class="part1" id="">
+    <p>
+      This is
+      <em>HTML!</em>
+    </p>
   </div>
-</footer>
+  <div class="download" id="">
+    <a href="./ResumeContent" download>Download Here!</a>
+  </div>
 
-      <!–– div class is for styling and id a unique identifier ––>
-    <div class="part1" id="">
-      <p>
-        This is <em>HTML!</em>
-      </p>
-    </div>
-    <div class="download" id="">
-      <a href="./ResumeContent" download>Download Here!</a>
-    </div>
-
-  </body>
+</body>
 
 </html>
