Assignments W2 checkin two

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -60,22 +60,40 @@
     <div id="experience">
       <h2>Experience</h2>
       <article>
-        <h4>GN Thermoforming</h4>
-        <p>2016 - 2018</p>
-        <h5>Programmer</h5>
-        <p>Programming Machines, testing, fixing bugz, etc.</p>
+          <div class="pos">
+            <div class="pos1">
+                <p class="date">2016 - 2018</p>
+              <h4>GN Thermoforming</h4>
+            </div>
+            <div class="pos2">
+              <h5>Programmer</h5>
+              <p>Programming Machines, testing, fixing bugz, etc.</p>
+            </div>
+          </div>
       </article>
       <article>
-        <h4>Process Automation Solutions</h4>
-        <p>2013 - 2015</p>
-        <h5>Project & Application Engineer</h5>
-        <p>Executing automation projects, testing, fixing bugz, etc.</p>
+          <div class="pos">
+              <div class="pos1">
+                <p class="date">2016 - 2018</p>
+                <h4>GN Thermoforming</h4>
+              </div>
+              <div class="pos2">
+                <h5>Programmer</h5>
+                <p>Programming Machines, testing, fixing bugz, etc.</p>
+              </div>
+            </div>
       </article>
       <article>
-        <h4>Honeywell</h4>
-        <p>2011 - 2013</p>
-        <h5>Project & Application Engineer</h5>
-        <p>Executing automation projects, testing, fixing bugz, etc.</p>
+          <div class="pos">
+              <div class="pos1">
+                  <p class="date">2016 - 2018</p>
+                <h4>GN Thermoforming</h4>
+              </div>
+              <div class="pos2">
+                <h5>Programmer</h5>
+                <p>Programming Machines, testing, fixing bugz, etc.</p>
+              </div>
+            </div>
       </article>
     </div>
   </section>
