Checking in incomplete assignments. Need more work on coloring a inside experience section.

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <title>Homepage</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400i,700" rel="stylesheet">
 </head>
@@ -67,6 +68,7 @@
             <div class="pos2">
               <h5>Programmer</h5>
               <p>Programming Machines, testing, fixing bugz, etc.</p>
+              <a href="./projects.html">Click here for projects!</a>
             </div>
           </div>
       </article>
