Adding W5D2 in class assignments. Better to be done in functions for better organization. Watch the video W5D2 in order to see how Andrew did.

--- a/jQuery Practices/W5D1/index.html
+++ b/jQuery Practices/W5D1/index.html
@@ -16,8 +16,9 @@
       </form>
     </main>
     <footer>
-      <div id="searchresults">
-        <p>Submit complete!</p>
+      <div id="searchresults" class="noshow">
+        <p>Test</p>
+        <button id="again" type="submit" name="again">Search Again</button>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
