--- a/jQuery Practices/W5D1/index.html
+++ b/jQuery Practices/W5D1/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>My jQuery Project</h1>
+      <h1>Welcome to Daily Horoscope!</h1>
     </header>
     <main>
       <form>
@@ -17,8 +17,13 @@
     </main>
     <footer>
       <div id="searchresults" class="noshow">
-        <p>Test</p>
         <button id="again" type="submit" name="again">Search Again</button>
+        <div id="leftside">
+
+        </div>
+        <div id="rightside">
+
+        </div>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
